Update configuration to include refresh interval and enhance UI with refresh info display

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ MYSQL_USER=root
 MYSQL_PASSWORD=yourpassword
 MYSQL_DATABASE=smart_tank
 ESP32_API_KEY=your-secret-key
-TANK_HEIGHT_CM=100 
+TANK_HEIGHT_CM=100
+REFRESH_INTERVAL_MS=5000 
