--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "npm run frontend:install && npm run frontend:build"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
